@@ -1,5 +1,14 @@
 ------------------------------------------------------------------------
-r1710 | gaser | 2020-09-03 10:58:33
+r1711 | gaser | 2020-09-03 17:45:24
+
+Changed paths:
+M       CHANGES.txt
+M       Makefile
+M       compile.m
+
+Changed: Added compile.m to the distribution.
+------------------------------------------------------------------------
+r1710 | gaser | 2020-09-03 10:59:16 +0200 (Do, 03 Sep 2020) | 8 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -8,6 +17,7 @@ M       cat_run.m
 Fixed:   Windows user names with spaces cause trouble with parallel processing 
          in cat_run.m. Thanks to Brendan Balken for providing a solution for 
          that.
+
 ------------------------------------------------------------------------
 r1709 | gaser | 2020-09-02 12:53:33 +0200 (Mi, 02 Sep 2020) | 7 lines
 
